added divs and var's to target the divs to drop the question and buttons into

--- a/index.html
+++ b/index.html
@@ -27,16 +27,12 @@
     <button id="start">Start!</button>
     <h2 id="counter-display"></h2>
   </header>
-  <container id="all-questions">
-    <div id="question1" class="questions">
-      <ol>Who is the most powerful villain?
-        <li>Darth Vader</li>
-        <li>King Shark</li>
-        <li></li>
-        <li></li>
-      </ol>
-    </div>
-  </container>
+  <main >
+  <div id="question-display"></div>
+  <div id="selection-display"></div>
+  <div id="answer-display"></div>
+  </main>
+  
 <script src="assets\script.js"></script>
 </body>
 </html>
