added quiz question generator, score saving feature and clearing features. can style at will.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       </ul>
     </div>
     <div id="postGame" class="swapMe" hidden>
-      <p>Good luck!</p>
+      <p id="good-luck">Good luck!</p>
     </div>
     <button id="start">Start!</button>
     <h2 id="counter-display"></h2>
